--- a/Home.css
+++ b/Home.css
@@ -39,8 +39,7 @@ a:hover {
 
 .img-responsive {
     width: 100%;
-    height: auto;
-   
+    height: auto;   
 }
 
 /* Text overlay styling */
@@ -64,6 +63,8 @@ a:hover {
     cursor: pointer;
     border-radius: 20px;
 }
+
+
 .text1{
     font-size:30px;
 }
@@ -80,25 +81,26 @@ a:hover {
 
   }
   .menu-item {
-    background-color: #fff;
+    background-color: #ffffff;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 15px 15px rgba(0, 0, 0, 0.1);
     width: 220px;
     padding: 15px;
     text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
+
   }
   .menu-item img {
     width: 200px;
     height: 200px;
     border-radius: 8px;
     margin-bottom: 10px;
-     }
+  }
   .menu-item div {
     margin: 5px 0;
-    //font-size: 1em;
+    font-size: 1em;
   }
   .menu-item .price {
     font-weight: bold;
@@ -106,7 +108,7 @@ a:hover {
   }
   .rating {
     color: #ff9800;
-    font-size: 1.2em;
+    font-size: 1.5em;
     margin-top: 5px;
   }
   .menu-item button {
@@ -127,4 +129,23 @@ a:hover {
   .meny-item .desc{
     font-size:100px;
   }
+  div .desc{
+    font-size:15px;
+    font-weight: 700;
+  }
 
+  h3{
+    text-align: center;
+    font-weight: 700;
+    color:rgb(9, 9, 10);
+   
+
+  }
+  div .ending{
+    text-align: center;
+    font-weight: 700;
+    color:black;
+    background-color: rgb(245, 219, 73);
+    margin-top:30px;
+   
+  }
